# astuce

./: NOTES.md  README.md  all-documents.html  astuce._assigned_statements.html  astuce._astunparse.html  astuce._astutils.html  astuce._context.InferenceContext.html  astuce._context.html  astuce._decorators.html  astuce._filter_statements.html  astuce._inference_decorators.html  astuce._lookup.html  astuce._monkey.MonkeyPatcher.html  astuce._monkey.html  astuce._typing.ASTNode.html  astuce._typing.ASTexpr.html  astuce._typing.ASTstmt.html  astuce._typing.AnnAssign.html  astuce._typing.Assign.html  astuce._typing.AsyncFor.html  astuce._typing.AsyncFunctionDef.html  astuce._typing.Attribute.html  astuce._typing.AugAssign.html  astuce._typing.BinOp.html  astuce._typing.ClassDef.html  astuce._typing.ConcreteInstance.html  astuce._typing.Constant.html  astuce._typing.Dict.html  astuce._typing.DictComp.html  astuce._typing.Expr.html  astuce._typing.For.html  astuce._typing.FunctionDef.html  astuce._typing.GeneratorExp.html  astuce._typing.IfExp.html  astuce._typing.Import.html  astuce._typing.ImportFrom.html  astuce._typing.Lambda.html  astuce._typing.List.html  astuce._typing.ListComp.html  astuce._typing.Module.html  (+46 more)
.github/workflows/: ci.yml  docs.yml
astuce/: __init__.py  _assigned_statements.py  _astunparse.py  _astutils.py  _context.py  _decorators.py  _filter_statements.py  _inference_decorators.py  _lookup.py  _monkey.py  _typing.py  exceptions.py  expressions.py  filter_statements.py  helpers.py  infer_expr.py  inference.py  monkey.py  nodes.py  parser.py
astuce/cfg/: __init__.py
scripts/: update-cfg.py  validate-patch.py
tests/: __init__.py  test_assigned_statements.py  test_astunparse.py  test_cfg.py  test_cfg_integration.py  test_inference.py  test_inference2.py  test_lookup.py  test_monkey.py  test_nodes.py  test_python3.py  test_resolve.py  test_transforms.py
