[metadata]
name = astuce
description = AST inference utilities.
version = 0.0.0
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/tristanlatr/astuce
author = Various contributors
license = GNU LESSER GENERAL PUBLIC LICENSE Version 2.1
license_files =
    LICENSE
keywords = static code analysis,python,abstract syntax tree

[options]
packages = find:
install_requires =
    cached_property; python_version < '3.8'
python_requires = >=3.7.2
;TODO: would be good to support python 3.6

[options.extras_require]
test = 
    attrs
    coverage
    pytest
    astor
docs = 
    pydoctor

[options.packages.find]
include =
    astuce*

[mypy]
disallow_any_generics=True
disallow_incomplete_defs=True
disallow_untyped_defs=True
namespace_packages=True
no_implicit_optional=True
show_error_codes=True
warn_no_return=True
warn_redundant_casts=True
warn_return_any=True
warn_unreachable=True
warn_unused_configs=True
warn_unused_ignores=True
# Don't want to hear about these warnings yet
disable_error_code=override,misc,arg-type,attr-defined,import,no-any-return

# Ignore errors in decorator module
[mypy-astuce._decorators]
ignore_errors=True

[pydoctor]
project-name=astuce 
project-url=https://github.com/tristanlatr/astuce/
html-viewsource-base=https://github.com/tristanlatr/astuce/tree/main
html-output=build/apidocs
docformat=google
process-types=True
theme=readthedocs
intersphinx=
    https://docs.python.org/3/objects.inv
